unpackaged/main/default/objects/Opportunity/fields/My_Next_Opp__c.field-meta.xml
<CustomField>
    <fullName>My_Next_Opp__c</fullName>
    <label>My Next Opp</label>
    <length>16</length>
    <type>Text</type>
</CustomField>