unpackaged/main/default/objects/Opportunity/fields/Next_Stage_Opp__c.field-meta.xml
<CustomField>
    <fullName>Next_Stage_Opp__c</fullName>
    <label>Next Stage Opp</label>
    <length>32</length>
    <type>Text</type>
</CustomField>