unpackaged/main/default/objects/Opportunity/fields/Opp_Test1__c.field-meta.xml
<CustomField>
    <fullName>Opp_Test1__c</fullName>
    <label>Opp Test1</label>
    <length>16</length>
    <type>Text</type>
</CustomField>