unpackaged/main/default/objects/Opportunity/fields/People_Count__c.field-meta.xml
<CustomField>
    <fullName>People_Count__c</fullName>
    <label>People_Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>