unpackaged/main/default/objects/Opportunity/fields/Support_Desc__c.field-meta.xml
<CustomField>
    <fullName>Support_Desc__c</fullName>
    <label>Support_Desc</label>
    <type>TextArea</type>
</CustomField>